--- a/config/hypr/hyprsunset.conf
+++ b/config/hypr/hyprsunset.conf
@@ -1,6 +1,5 @@
-# Makes hyprsunset do nothing to the screen by default
-# Without this, the default applies some tint to the monitor
+# Default nightlight on
 profile {
-    time = 07:00
-    identity = true
+    time = 00:00
+    temperature = 4000
 }
